@@ -1,3 +1,10 @@
+2003-08-05 Tom Copeland  <tom@infoether.com>
+
+	* cronjobs/cvs-cron/history_parse.php:
+	Converted from Perl to PHP.  Note that you can generate older stats
+	by running it with an argument in days, like "./history_parse.php 120",
+	which would populate the past 120 days of stats.
+
 2003-07-29 Christian Bayle	<bayle@debian.org>
 
 	* Don't allow to go in QRS if no package is defined or activ
